<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4026.13">
  <GVL Name="GVL_MSG" Id="{1f59c8f2-e32b-47ba-a209-3a0fb31c2a9a}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL CONSTANT
  //-----------------------------------------------------------------------------
  // file paths for message system
  //  - compiler define option WIN switches to Windows file paths
  //-----------------------------------------------------------------------------
{IF defined (WIN)}
  {info 'WIN folders'}
  LOG_DIR               : STRING  := 'C:\TwinCAT\#MsgFiles\'; // delimiter at the end is mandatory!!
{ELSE}
  {info 'BSD folders'}
  LOG_DIR               : STRING  := '/usr/local/etc/TwinCAT/#MsgFiles/'; // delimiter at the end is mandatory!!
{END_IF}

  LOG_FILE              : STRING  := 'MSG_XtsTransport_';
  LOG_FILE_APP          : STRING  := 'MSG_Application_';
  LOG_FILE_METRIC       : STRING  := 'MSG_XtsTransportMetrics_';

  MAX_MESSAGE           : UINT    := 2000; // max entry in message list
END_VAR
VAR_GLOBAL
  //-----------------------------------------------------------------------------
  // Message System
  //  - Everybody uses f_MessageSet(ST_Message)
  //    - DECISION WHICH LIST IS MADE IN f_MessageSet !!
  //    - which list to use is determined by e_Device in your message
  //
  //  - MessageData instances are self sufficient and need only 
  //    datafield assignment for correct data-flow
  //
  //
  //-----------------------------------------------------------------------------
  //-----------------------------------------------------------------------------
  //-----------------------------------------------------------------------------
  // (ST_Message.eDevice := e_Device.Application)
  //----------------------------------------------------------------------------- 
  ApplicationMessageData          : fb_MessageDataCtrl;
  ApplicationMessageCtrl          : st_message_ctrl;
  ApplicationMessageState         : st_message_state;

  ApplicationMessages             : ARRAY[1..MAX_MESSAGE] OF ST_Message;
  MessageApplicationIndex         : UINT := 0; // message index for higher layers (grouping, Instances, etc.)
  MessageApplicationError         : UINT := 0; // error counter for higher learning
  //-----------------------------------------------------------------------------
  //-----------------------------------------------------------------------------
  // (ST_Message.eDevice := from Device_Null to XfcAxis)
  //-----------------------------------------------------------------------------
  TransportMessageData            : fb_MessageDataCtrl;
  TransportMessageCtrl            : st_message_ctrl;
  TransportMessageState           : st_message_state;

  TransportMessages               : ARRAY[1..MAX_MESSAGE] OF ST_Message;
  MessageTransportIndex           : UINT := 0; // message index for base layer
  MessageTransportError           : UINT := 0; // error counter for base layer
  //-----------------------------------------------------------------------------
  //-----------------------------------------------------------------------------
  // (ST_Message.eDevice := e_Device.Metrics)
  //-----------------------------------------------------------------------------
  MetricsMessageData              : fb_MessageDataCtrl;
  MetricsMessageCtrl              : st_message_ctrl;
  MetricsMessageState             : st_message_state;

  MetricsMessages                 : ARRAY[1..MAX_MESSAGE] OF ST_Message;
  MessageMetricsIndex             : UINT := 0; // message index for metrics data
  MessageMetricsError             : UINT := 0; // error counter for metrics data
  //-----------------------------------------------------------------------------
  //-----------------------------------------------------------------------------
  // (ST_Message.eDevice := e_Device.ProductData)
  //-----------------------------------------------------------------------------
  ProductMessageData              : fb_MessageDataCtrl;   // This is for you
  ProductMessageCtrl              : st_message_ctrl;
  ProductMessageState             : st_message_state;

  ProductMessages                 : ARRAY[1..MAX_MESSAGE] OF ST_Message;
  MessageProductIndex             : UINT := 0; // message index for your product data
  MessageProductError             : UINT := 0; // error counter for your product data
  //-----------------------------------------------------------------------------
  //-----------------------------------------------------------------------------
  fbLocalTime                     : fb_LocalTime;
  dtLocalTime                     : DT;
  sLocalTime                      : STRING;
  //-----------------------------------------------------------------------------
  //-----------------------------------------------------------------------------
  //-----------------------------------------------------------------------------
  //-----------------------------------------------------------------------------
  MessageLevelXpu                 : E_MessageType;
  MessageLevelStations            : ARRAY[1..MAX_STATION] OF E_MessageType;
  MessageLevelMovers              : ARRAY[1..MAX_MOVER]   OF E_MessageType;

  MessageLevelProcess             : ARRAY[1..MAX_PROCESS] OF E_MessageType;

{IF defined (TEST)}
  {info 'TEST logging enabled'}
  MessageLevel                    : E_MessageType := eMessageinfo; // a lot of messages
{ELSE}
  MessageLevel                    : E_MessageType := eMessageEmpty; // only errors are written into list 
{END_IF}

END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>