<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4026.13">
  <POU Name="f_MessageSet" Id="{7dd9a0ea-132a-4368-8b98-e527af9ed450}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION f_MessageSet : BOOL
VAR_INPUT
  stMessage     : ST_Message;
END_VAR
VAR
  _uiIndex      : UINT;
  _MainDevice   : e_Device;
  _nModRes      : UDINT;     // residual after modulo
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[stMessage.tTime                     := GVL_MSG.sLocalTime;

// why here? so all calls to this function may stay the same
_nModRes                            := stMessage.eDevice MOD e_Device.General;
_MainDevice                         := stMessage.eDevice - _nModRes;

CASE _MainDevice
OF
  e_device.DataProduct:
    // this is your data, if you choose to use this message system
    FOR _uiIndex := 1 TO GVL_MSG.MAX_MESSAGE
    DO
      IF (GVL_MSG.ProductMessages[_uiIndex].eType = e_MessageType.eMessageEmpty)
      THEN
        GVL_MSG.ProductMessages[_uiIndex]      := stMessage;
        GVL_MSG.MessageProductIndex            := _uiIndex;
        EXIT;
      END_IF
    END_FOR
  
    IF (stMessage.eType = E_MessageType.eMessageError)
    THEN
      // in case of error: increment counter
      GVL_MSG.MessageProductError     := GVL_MSG.MessageProductError + 1;
    END_IF


  e_Device.Process,
  e_Device.Application:
    FOR _uiIndex := 1 TO GVL_MSG.MAX_MESSAGE
    DO
      IF (GVL_MSG.ApplicationMessages[_uiIndex].eType = e_MessageType.eMessageEmpty)
      THEN
        GVL_MSG.ApplicationMessages[_uiIndex]  := stMessage;    // yes, we grab global values directly, only here
        GVL_MSG.MessageApplicationIndex        := _uiIndex;
        EXIT;
      END_IF
    END_FOR
    IF (stMessage.eType = E_MessageType.eMessageError)
    THEN
      // in case of error: increment counter
      GVL_MSG.MessageApplicationError := GVL_MSG.MessageApplicationError + 1;
    END_IF

  e_Device.Metrics:
    FOR _uiIndex := 1 TO GVL_MSG.MAX_MESSAGE
    DO
      IF (GVL_MSG.MetricsMessages[_uiIndex].eType = e_MessageType.eMessageEmpty)
      THEN
        GVL_MSG.MetricsMessages[_uiIndex]  := stMessage;    // yes, we grab global values directly, only here
        GVL_MSG.MessageMetricsIndex        := _uiIndex;
        EXIT;
      END_IF
    END_FOR
    IF (stMessage.eType = E_MessageType.eMessageError)
    THEN
      // in case of error: increment counter
      GVL_MSG.MessageMetricsError := GVL_MSG.MessageMetricsError + 1;
    END_IF

ELSE
  FOR _uiIndex := 1 TO GVL_MSG.MAX_MESSAGE
  DO
    IF (GVL_MSG.TransportMessages[_uiIndex].eType = e_MessageType.eMessageEmpty)
    THEN
      GVL_MSG.TransportMessages[_uiIndex]      := stMessage;
      GVL_MSG.MessageTransportIndex            := _uiIndex;
      EXIT;
    END_IF
  END_FOR

  IF (stMessage.eType = E_MessageType.eMessageError)
  THEN
    // in case of error: increment counter
    GVL_MSG.MessageTransportError := GVL_MSG.MessageTransportError + 1;
  END_IF
END_CASE


]]></ST>
    </Implementation>
    <LineIds Name="f_MessageSet">
      <LineId Id="104" Count="0" />
      <LineId Id="203" Count="0" />
      <LineId Id="189" Count="0" />
      <LineId Id="205" Count="0" />
      <LineId Id="207" Count="0" />
      <LineId Id="209" Count="0" />
      <LineId Id="206" Count="0" />
      <LineId Id="210" Count="0" />
      <LineId Id="263" Count="0" />
      <LineId Id="299" Count="0" />
      <LineId Id="267" Count="14" />
      <LineId Id="264" Count="0" />
      <LineId Id="262" Count="0" />
      <LineId Id="212" Count="1" />
      <LineId Id="217" Count="8" />
      <LineId Id="257" Count="4" />
      <LineId Id="282" Count="0" />
      <LineId Id="284" Count="14" />
      <LineId Id="215" Count="0" />
      <LineId Id="214" Count="0" />
      <LineId Id="235" Count="9" />
      <LineId Id="251" Count="4" />
      <LineId Id="211" Count="0" />
      <LineId Id="204" Count="0" />
      <LineId Id="188" Count="0" />
      <LineId Id="7" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>